# samc

./: NASFileSync.ps1  filecleaner60.ps1  kiosk.sh
NasFileSync/: NASFileSync.ps1  README.md
SWC-scripts/: com.user.closepropresenter.plist  com.user.openpropresenter.plist  open_prop.scpt
imageloop/: README.md  kiosk.sh
mp_report_gen/: pyproject.toml
mp_report_gen/src/mp_report_gen/: report_generator.py  report_generator_alt.py
schematics/: README.md  Smith_Projector.drawio
vimeo/automaton/: .gitignore  pyproject.toml
vimeo/automaton/src/automaton/: automaton.py
