[project]
name = "mp-report-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "trop3n",email = "jasondkimm@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "mp_report_gen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
